--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -18,16 +18,6 @@
 <body>
     <h1>Hello World</h1>
     <p>Me livrei da maldição!</p>
-    <script>
-        // Janela de Alerta
-        window.alert('Minha Primeira Mensagem')
-
-        // Janela de Confirmação
-        window.confirm('Está gostando do script?')
-
-        // Janela de prompt
-        // Pode ser usado para fazer pergunta
-        window.prompt('Quão é o seu nome?')
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
